applications/terra-prof-production/infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terrafusionpro
  labels:
    name: terrafusionpro
