applications/terra-prof-production/infrastructure/kubernetes/base/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
  namespace: terrafusionpro
  labels:
    app: web-client
    part-of: terrafusionpro
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: web-client
