applications/terra-prof-production/infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrafusionpro-ingress
  namespace: terrafusionpro
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - app.terrafusionpro.com
        - api.terrafusionpro.com
      secretName: terrafusionpro-tls
  rules:
    - host: app.terrafusionpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client
                port:
                  number: 80
    - host: api.terrafusionpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
